--- a/style.css
+++ b/style.css
@@ -2,14 +2,54 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	font-family: 'Poppins', sans-serif;
+	/*font-family: 'Poppins', sans-serif;*/
+	font-family: 'Jost', sans-serif;
+	color: white;
 }
 
 nav {
-	background-color: #5193B3;
+	background-color: #26648E;
+	color: white;
 }
 
 .active {
 	font-weight: 700;
+}
+
+.display-4 {
+	font-size: 55px;
+	font-weight: 700;
+
+}
+
+.jumbotron {
+	/*background-color: #26648E;*/
+	/*text-align: center;*/
+	padding-top: 150px;
+	height: 600px;
+	background: linear-gradient(to top, rgba(100, 196, 195, 0.5) 0%,rgba(38, 100, 142,1) 100%), url(images/bg.jpg) no-repeat center center ;
+	/*background-image:  url(https://placeimg.com/1000/480/nature);*/
+	/*background-attachment: static;*/
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+
+}
+
+.jumbotron:before {
+	content: '';
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 250px;
+	background: url(images/wave.png);
+	background-size: cover;
+	background-repeat: no-repeat;
+
+}
+.jumbotron p {
+	text-shadow: 1px 4px 4px #555;
 }
 
