--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 	box-sizing: border-box;
 	/*font-family: 'Poppins', sans-serif;*/
 	font-family: 'Jost', sans-serif;
-	color: white;
+	
 }
 
 nav {
@@ -21,35 +21,98 @@ nav {
 	font-weight: 700;
 
 }
+#about {
+	padding-top: 70px;
+	margin: auto;
+	min-height: 100vh;
+}
+
+#contact {
+	padding-top: 70px;
+	margin: auto;
+	min-height: 100vh;
+}
+
+#portfolio {
+	padding-top: 70px;
+	margin: auto;
+	min-height: 100vh;
+}
+
 
 .jumbotron {
-	/*background-color: #26648E;*/
-	/*text-align: center;*/
-	padding-top: 150px;
-	height: 600px;
+	color: white;
+	padding-top: 200px;
+	padding-bottom: 100px;
+	min-height: 100vh;
 	background: linear-gradient(to top, rgba(100, 196, 195, 0.5) 0%,rgba(38, 100, 142,1) 100%), url(images/bg.jpg) no-repeat center center ;
-	/*background-image:  url(https://placeimg.com/1000/480/nature);*/
-	/*background-attachment: static;*/
-    background-position: center;
+	background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
 
 }
 
-.jumbotron:before {
-	content: '';
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	width: 100%;
-	height: 250px;
-	background: url(images/wave.png);
-	background-size: cover;
-	background-repeat: no-repeat;
-
-}
 .jumbotron p {
 	text-shadow: 1px 4px 4px #555;
 }
 
+.progress {
+	margin-bottom: 20px;
+}
+
+.footer-bottom {
+  /*display: flex;*/
+  /*align-items: center;*/
+  /*justify-content: space-evenly;*/
+  text-align: center;
+  width: 100%;
+  padding-top: 10px;
+  margin: auto;
+  height: 40px;
+
+}
+
+
+footer {
+	 background-color: #26648E;
+	 color: white;
+}
+
+.contact {
+	margin-bottom: 200px;
+}
+.contact h1 {
+	margin-bottom: 50px;
+}
+.progress {
+	width: 300px;
+}
+
+.skill-1 {
+	width: 90%;
+}
+.skill-2 {
+	width: 80%;
+}
+.skill-3 {
+	width: 40%;
+}
+.skill-4 {
+	width: 75%;
+}
+.skill-5 {
+	width: 50%;
+}
+.skill-6 {
+	width: 40%;
+}
+.skill-7 {
+	width: 80%;
+}
+.skill-8 {
+	width: 90%;
+}
+.skill-9 {
+	width: 50%;
+}
